--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-	<title>Vital LSPD</title>
+	<title>Ephorize LSPD</title>
 	<link rel="icon" href="images/favicon.png" type="image">
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
